[package]
name = "enact"
version = "0.1.0"
authors = ["Gregory <gregory.mkv@gmail.com>"]
edition = "2018"

[profile.release]
opt-level=3
lto=true

[dependencies]
anyhow = "1.0.28"
itertools = "0.9.0"
structopt = { version = "0.3.13", default-features = false }
log = "0.4.8"
flexi_logger = { version = "0.15.2", default-features = false }
